--- a/src/Movie.css
+++ b/src/Movie.css
@@ -1,12 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #eff3f7;
-  height: 100%;
-}
-
 html,
 body,
 .container {
@@ -51,7 +42,8 @@ body,
 .movie img {
   position: relative;
   top: -50px;
-  max-width: 120px;
+  max-width: 180px;
+  width: 100%;
   margin-right: 30px;
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
